[gd_scene load_steps=5 format=3 uid="uid://bifc1d6qxjnqe"]

[ext_resource type="Theme" uid="uid://1k82t3bn6n0n" path="res://main.tres" id="1_jqb0s"]
[ext_resource type="Script" path="res://scenes/preview_card.gd" id="2_28rfh"]
[ext_resource type="StyleBox" uid="uid://cgq5dgf4b552" path="res://scenes/card_ui/card_base_stylebox.tres" id="3_xlho2"]
[ext_resource type="Texture2D" uid="uid://bfeha1s48vqd2" path="res://art/air.png" id="4_i8uml"]

[node name="PreviewCard" type="Control"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1052.0
offset_bottom = -528.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jqb0s")
script = ExtResource("2_28rfh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_xlho2")

[node name="CardName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -26.0
offset_right = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "Water"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00565, 1)
mouse_filter = 2
texture = ExtResource("4_i8uml")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
